# mimicode

./: .gitignore  BENCHMARKING_MEMORY.md  BENCHMARK_RESULTS.md  INSTALLATION_SUMMARY.txt  PUBLISH_CHECKLIST.md  QUICKSTART_TUI.md  README.md  README_TUI.md  ROUTING.md  RUN_TUI.md  SETUP_GUIDE.md  TUI.md  TUI_BANNER.txt  TUI_COMPLETE.md  TUI_IMPLEMENTATION.md  TUI_INDEX.md  TUI_README.md  TUI_SUMMARY.md  TUI_VISUAL_GUIDE.md  UPDATE_SUMMARY.txt  agent.py  check_deps.py  compactor.py  demo_tui.py  diff_display.py  generate_poems.py  install.sh  logger.py  memory_search.py  mimi_memory.py  mimicode  mimicode.bat  providers.py  reflect.py  repomap.py  requirements-memory.txt  requirements.txt  router.py  session_history.py  setup.sh  (+18 more)
.mimi/memory/: index.json
.mimi/memory/components/: agent.json  logger.json  tools.json  tui.json
.mimi/memory/decisions/: tui-markdown-files-eliminated.json
bench/: runner.py  scorers.py  tasks.py
bench/fixtures/edit_single_line/: config.py  main.py
bench/fixtures/memory_recall/: README.md
bench/fixtures/multi_rename/: helpers.py
bench/fixtures/red_herring_debug/: README.md  myscript.py
bench/fixtures/scoped_rename/: helpers.py  other.py
bench/fixtures/search_basic/: README.md  agent.py  tools.py
reports/: part1_architecture_and_components.txt
tbench_adapter/: README.md  pyproject.toml
tbench_adapter/mimicode_tbench/: __init__.py  agent.py
tests/: test_agent.py  test_memory_search.py  test_mimi_memory.py  test_providers.py  test_repomap.py  test_router.py  test_tools.py  test_tools_router.py  test_tools_session.py
(+1 files in other folders)
