[project]
name = "mimicode-tbench"
version = "0.1.0"
description = "Harbor agent adapter for running mimicode on Terminal-Bench"
requires-python = ">=3.11"
dependencies = [
    "harbor>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mimicode_tbench"]
